--- a/src/hackathon_assets/src/index.html
+++ b/src/hackathon_assets/src/index.html
@@ -9,11 +9,11 @@
     <link type="text/css" rel="stylesheet" href="main.css" />
 </head>
 <body>
-    <img src="logo.png" alt="DFINITY logo" />
+    <!--<img src="logo.png" alt="DFINITY logo" />-->
     <section>
-        <label for="name">Enter your name: &nbsp;</label>
+        <label for="name">Write your post: &nbsp;</label>
         <input id="name" alt="Name" type="text" />
-        <button id="clickMeBtn">Click Me!</button>
+        <button id="clickMeBtn">Post!</button>
     </section>
     <section id="greeting"></section>
 </body>
