Rainbow button added

--- a/src/hackathon_assets/src/index.html
+++ b/src/hackathon_assets/src/index.html
@@ -16,5 +16,15 @@
         <button id="clickMeBtn">Post!</button>
     </section>
     <section id="greeting"></section>
+    <h1>Dead Man’s Switch</h1>
+    <h3>using Proof of Stake</h3>
+    regularly verify that you are alive, otherwise your uploaded files will get published
+    <a class="rainbow-button" data-text="Staker" style="width: 200px"></a>
+    <a class="rainbow-button" data-text="Uploader" style="width: 220px"></a>
+    <div style="text-align: center">
+        <video width="500" autoplay loop>
+            <source src = "/assets/key_animation.mov">
+        </video>
+    </div>
 </body>
 </html>
