--- a/src/hackathon_assets/src/index.html
+++ b/src/hackathon_assets/src/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
  <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width">
-    <title>custom_greeting</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Yeet Man's Switch</title>
     <base href="/">
     <link type="text/css" rel="stylesheet" href="main.css" />
  </head>
