--- a/src/hackathon_assets/src/index.html
+++ b/src/hackathon_assets/src/index.html
@@ -7,7 +7,7 @@
     <base href="/">
     <link type="text/css" rel="stylesheet" href="main.css" />
  </head>
- <body>
+ <body style="background-image: url('city.jpg')">
     <div id="app"></div>
  </body>
 </html>
