--- a/src/hackathon_assets/src/index.html
+++ b/src/hackathon_assets/src/index.html
@@ -3,7 +3,7 @@
  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yeet Man's Switch</title>
+    <title>DApp Man's Switch</title>
     <base href="/">
     <link type="text/css" rel="stylesheet" href="main.css" />
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💀</text></svg>">
